# avicenna

./: Cargo.toml  README.md
src/: input.rs  internal.rs  main.rs
